# cargo-ff

./: .gitignore  Cargo.toml  Justfile  README.md
src/: cache.rs  cli.rs  coalesce.rs  discover.rs  dispatch.rs  exec.rs  lib.rs  report.rs  size.rs  types.rs
tests/: config_validation.rs  discover.rs  equivalence.rs
