[package]
name = "cargo-ff"
version = "0.0.1-rc1"
edition = "2024"
description = "Fast Format drop-in replacement for cargo-fmt"
license = "GPL-3.0-only"

[lib]
name = "cargo_ff"
path = "src/lib.rs"

[[bin]]
name = "cargo-ff"
path = "src/bin/cargo-ff.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:anyhow"]

[dependencies]
cargo_metadata = "0.23"
walkdir = "2"
crossbeam-channel = "0.5"
thiserror = "2"
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }

# Release with debug info for `samply` flamegraphs. Same opt level as
# release; just keeps symbols + line tables so samples resolve to source.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = false
